Fixed overflow for the menu (#1537)

--- a/styles/less/ui/sidebar/daggerheartMenu.less
+++ b/styles/less/ui/sidebar/daggerheartMenu.less
@@ -5,6 +5,8 @@
         display: flex;
         flex-direction: column;
         gap: 8px;
+        overflow: auto;
+        height: 100%;
     }
 
     h2 {
